Add custom job which running on sepcify pool
Change-Id: Ife304d0089e6dd71afa59132300acc79f30d0493

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -1,10 +1,24 @@
 ---
+
+- job:
+    name: unit-tests
+    parent: base
+    description: this is running the unit tests for this project
+    run: playbooks/unittests.yaml
+    nodeset:
+      nodes:
+# pool's name, not nodes node, it's `nodes`
+        - name: main 
+          label: dlrn-worker 
+
 - project:
     name: demo-project
     check:
       jobs:
         - tox-py27
         - demo-rpmbuild
+        - unit-tests
     gate:
       jobs:
         - tox-py27
+        - unit-tests
