--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -5,6 +5,7 @@
     parent: base
     description: this is running the unit tests for this project
     run: playbooks/unittests.yaml
+    post-run: playbooks/fetch-logs.yaml
     nodeset:
       nodes:
 # pool's name, not nodes node, it's `nodes`
