--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -6,6 +6,8 @@
     description: this is running the unit tests for this project
     run: playbooks/unittests.yaml
     post-run: playbooks/fetch-logs.yaml
+    required-projects:
+        - demo-1
     voting: false
     nodeset:
       nodes:
