Correct unittests yaml
* update unittests's host's to all
* fix tox error

Change-Id: I7a525bd9bee1a53d51b90fd6ddcaa8e9b8e2640c

--- a/playbooks/unittests.yaml
+++ b/playbooks/unittests.yaml
@@ -1,5 +1,5 @@
 ---
-- hosts: test-node
+- hosts: all 
   tasks:
     - name: install tox package
       yum:
@@ -9,4 +9,4 @@
     - name: run unit tests
       command: tox
       args:
-        chdir: "{{ zuul.project.src_dir }}/tests"
+        chdir: "{{ zuul.project.src_dir }}"
